Mise à jour du message d'accueil

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Hello from Flask 👋</h1>
+        <h1>Hello GCYS2 👋</h1>
         <p>This app is deployed with CI/CD using Docker & GitHub Actions!</p>
     </div>
 </body>
