--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -10,5 +10,6 @@
         <h1>Hello GCYS2 👋</h1>
         <p>This app is deployed with CI/CD using Docker & GitHub Actions!</p>
     </div>
+    <img src="{{ url_for('static', filename='myimage.png') }}" alt="My Image" class="main-image">
 </body>
 </html>
