--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -8,7 +8,7 @@
 <body>
     <div class="container">
         <h1>Hello GCYS2 👋</h1>
-        <p>This app is deployed with CI/CD using Docker & GitHub Actions!</p>
+        <p>This app is deployed with CI/CD using Docker & GitHub Actions!!!</p>
     </div>
     <img src="{{ url_for('static', filename='myimage.png') }}" alt="My Image" class="main-image">
 </body>
